--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -11,11 +11,24 @@
 	<body>
 		<h1>Rango says...</h1>
 		<div>
-			hey there partner! <br />
+			hey there partner! <br/>
 			<strong>{{ boldmessage }}</strong><br />
 		</div>
+		
 		<div>
-			<a href="/rango/about/">About</a><br />
+		{% if categories %}
+			<ul>
+			{% for category in categories %}
+				<li>{{category.name}}</li>
+			{% endfor %}
+			</ul>
+		{% else %}
+			<strong>There are no categories present.</strong/>
+		{% endif %}
+		</div>
+		
+		<div>
+			<a href="/rango/about/">About Rango</a><br/>
 			<img	src="{% static 'images/rango.jpg' %}"
 					alt="Picture of Rango" />
 		</div>
