--- a/templates/rango/register.html
+++ b/templates/rango/register.html
@@ -13,10 +13,10 @@ Rango says: <strong>thank you for registering!</strong>
 {% else %}
 Rango says: <strong>register here!</strong><br />
 <form id="user_form" method="post" action="{% url rango:register' %}" enctype="multipart/form-data">
-	{%csrf_token %}
+	{% csrf_token %}
 	{{ user_form.as_p }}
 	{{ profile_form.as_p }}
 	<input type="submit" name="submit" value="Register" />
 </form>
 {% endif %}
-{$ endblock %}
+{% endblock %}
